--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2.4.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
@@ -23,6 +24,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.1",
@@ -31,6 +33,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.0.4",
+    "vite-plugin-babel": "^1.3.2",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
