--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2.4.0",
     "react": "^19.1.0",
