--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.0.4",
-    "vite-plugin-babel": "^1.3.2",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
