--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2.4.0",
+    "jotai": "^2.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.9.3"
