--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+rayon = "1.11.0"
+dashmap = "6.1.0"
+tauri-plugin-devtools = "2.0.0"
