--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^7.9.3"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
     "@eslint/js": "^9.37.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.6.2",
