--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2.4.0",
     "@tauri-apps/plugin-fs": "~2.4.2",
+    "@tauri-apps/plugin-shell": "~2.3.3",
     "jotai": "^2.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
