--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -22,8 +24,14 @@
     "react-router": "^7.9.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.1.2",
     "@emotion/babel-plugin": "^11.13.5",
     "@eslint/js": "^9.37.0",
+    "@storybook/addon-a11y": "10.0.2",
+    "@storybook/addon-docs": "10.0.2",
+    "@storybook/addon-onboarding": "10.0.2",
+    "@storybook/addon-vitest": "10.0.2",
+    "@storybook/react-vite": "10.0.2",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.6.2",
     "@types/react": "^19.1.8",
@@ -34,11 +42,17 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.23",
+    "eslint-plugin-storybook": "10.0.2",
     "globals": "^16.4.0",
+    "storybook": "10.0.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.0.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^4.5.0"
+    "vite-plugin-svgr": "^4.5.0",
+    "vitest": "^4.0.6",
+    "playwright": "^1.56.1",
+    "@vitest/browser-playwright": "^4.0.6",
+    "@vitest/coverage-v8": "^4.0.6"
   }
 }
