--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jotai": "^2.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.9.3"
+    "react-router": "^7.9.3",
+    "web-demuxer": "^4.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
@@ -39,6 +40,7 @@
     "typescript-eslint": "^8.45.0",
     "vite": "^7.0.4",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-static-copy": "^3.1.4",
     "vite-plugin-svgr": "^4.5.0"
   }
 }
