--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@tauri-apps/plugin-fs": "~2.4.2",
     "@tauri-apps/plugin-shell": "~2.3.3",
     "jotai": "^2.15.0",
+    "mediabunny": "^1.27.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.9.3",
-    "web-demuxer": "^4.0.0"
+    "react-router": "^7.9.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
@@ -38,9 +38,8 @@
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.0.4",
+    "vite": "^7.3.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-static-copy": "^3.1.4",
     "vite-plugin-svgr": "^4.5.0"
   }
 }
